ver 0.27: fix layout issue
fix layout issue

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container{
-    width: 75%;
+    width: 80%;
     height: 100%;
     position: relative;
 }
